--- a/pom.xml
+++ b/pom.xml
@@ -344,7 +344,7 @@
 			<plugin>
 				<groupId>de.jutzig</groupId>
 				<artifactId>github-release-plugin</artifactId>
-				<version>1.0.3</version>
+				<version>1.1.1-dns</version>
 				<executions>
 					<execution>
 						<id>github-upload</id>
