--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,11 @@
                         <artifactId>beam-binning</artifactId>
                         <version>5.0</version>
                 </dependency>
+                <dependency>
+                        <groupId>org.esa.beam</groupId>
+                        <artifactId>beam-pixel-extraction</artifactId>
+                        <version>5.0</version>
+                </dependency>
 		<dependency>
                         <groupId>org.esa.beam</groupId>
                         <artifactId>beam-pconvert</artifactId>
